Design Guichet/Administration Client, Vente, Achat

--- a/templates/Partials/nav.html.twig
+++ b/templates/Partials/nav.html.twig
@@ -54,15 +54,15 @@
                     </a>
 
                     <div class="sb-sidenav-menu-heading">STATISTIQUES</div>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="{{ path("list-clients") }}">
                         <div class="sb-nav-link-icon"><i class="fas fa-id-card"></i></div>
                         Les clients
                     </a>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="{{ path("list-buy") }}">
                         <div class="sb-nav-link-icon"><i class="fas fa-money-check-alt"></i></div>
                         Les achats
                     </a>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="{{ path("list-sales") }}">
                         <div class="sb-nav-link-icon"><i class="fas fa-money-bill-alt"></i></div>
                         Les ventes
                     </a>
