--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -11,13 +11,9 @@
     <script type="text/javascript" src="{{ asset('Assets/js/bootstrap.bundle.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('Assets/js/scripts.js') }}"></script>
 
-    {% block stylesheets %}
-        {#{{ encore_entry_link_tags('app') }}#}
-    {% endblock %}
+    {% block stylesheets %}{% endblock %}
 
-    {% block javascripts %}
-        {#{{ encore_entry_script_tags('app') }}#}
-    {% endblock %}
+    {% block javascripts %}{% endblock %}
 </head>
 <body>
 
