--- a/templates/Administration/ListSales.html.twig
+++ b/templates/Administration/ListSales.html.twig
@@ -10,7 +10,7 @@
                 <div class="d-flex justify-content-between">
                     <h3 class="text-black-50"><i class="fad fa-money-bill-alt"></i> LISTES DES VENTES</h3>
                     <div class="btn-group">
-                        <a href="#" class="btn btn-success"><i class="fad fa-list-alt"></i> Exporter la liste</a>
+                        <a href="javascript:window.print()" class="btn btn-success"><i class="fad fa-list-alt"></i> Exporter la liste</a>
                         <a href="#" class="btn btn-danger"><i class="fad fa-trash-alt"></i> Supprimer tout</a>
                     </div>
                 </div>
