--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,8 @@
     <body>
         {% block body %}{% endblock %}
 
+        {% block footer %}{% endblock %}
+
         <footer class="text-center copyright">
             <hr class="bg-opacity-50">
             <p>Immeuble Ririraz City Center - Box 101 - Lot SIAH 33 Analakely ,101, ANTANANARIVO <br>
