Enregistrement, Connexion PROCHANGE

--- a/templates/Partials/nav.html.twig
+++ b/templates/Partials/nav.html.twig
@@ -68,7 +68,7 @@
                     </a>
 
                     <div class="sb-sidenav-menu-heading">SYSTÈME</div>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="{{ path("list-user") }}">
                         <div class="sb-nav-link-icon"><i class="fad fa-users"></i></div>
                         Les utilisateurs
                     </a>
