--- a/templates/account/registration.html.twig
+++ b/templates/account/registration.html.twig
@@ -15,8 +15,8 @@
                     {{ form_start(FormRegistration) }}
                         {{ form_row(FormRegistration.pseudo)}}
                         {{ form_row(FormRegistration.email)}}
-                        {{ form_row(FormRegistration.slug)}}
                         {{ form_row(FormRegistration.hash)}}
+                        {{ form_row(FormRegistration.passwordConfirm)}}
                         <button type="submit" class="btn btn-primary"><i class="fad fa-check"></i> Enregistrer</button>
                     {{ form_end(FormRegistration) }}
                 </div>
