--- a/templates/Guichet/Sales.html.twig
+++ b/templates/Guichet/Sales.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
     <div class="container mt-5">
-        <h1 class="text-center"><i class="fad fa-money-bill-alt"></i><br>Listes des ventes</h1>
+        <h1 class="text-center titre-guichet"><i class="fad fa-money-bill-alt"></i><br>Listes des ventes</h1>
         <p class="text-center text-black-50">Compte de <span class="text-success text-break">Aina Fenomanitra</span></p>
         <div class="text-center">
             <a href="{{ path("guichet") }}" class="btn btn-outline-primary"><i class="fad fa-home-alt"></i> Tableau de bord</a>
