--- a/templates/Partials/nav.html.twig
+++ b/templates/Partials/nav.html.twig
@@ -1,14 +1,11 @@
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
     <!-- Navbar Brand-->
-    <a class="navbar-brand ps-3" href="#">PROCHANGE <sup>ADMIN</sup></a>
+    <a class="navbar-brand ps-3" href="#"><span class="text-admin">PROCHANGE</span><sup class="text-sup-admin">ADMIN</sup></a>
     <!-- Sidebar Toggle-->
     <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
     <!-- Navbar Search-->
     <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
-        <div class="input-group">
-            <input class="form-control" type="text" placeholder="Rechercher..." aria-label="Rechercher..." aria-describedby="btnNavbarSearch" />
-            <button class="btn btn-secondary" id="btnNavbarSearch" type="button"><i class="fad fa-search"></i></button>
-        </div>
+        <a href="#" class="btn btn-success"><i class="fad fa-portal-enter"></i> Interface Guichet</a>
     </form>
     <!-- Navbar-->
     <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4 -none d-md-inline-block">
