--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -5,6 +5,7 @@
     <title>{% block title %}Administration{% endblock %} - Prochange Madagascar</title>
     <link rel="stylesheet" href="{{ asset('Assets/css/style.css') }}">
     <link rel="stylesheet" href="{{ asset('Assets/css/styles.css') }}">
+    <link rel="stylesheet" href="{{ asset('Assets/css/custom.css') }}">
     <link rel="stylesheet" href="{{ asset('Assets/css/fontawesome-free/css/all.css') }}">
 
     <script type="text/javascript" src="{{ asset('Assets/js/all.min.js') }}"></script>
