Configuration des firewall du site

--- a/templates/Guichet/Buy.html.twig
+++ b/templates/Guichet/Buy.html.twig
@@ -10,7 +10,7 @@
         <div class="text-center">
             <a href="{{ path("guichet") }}" class="btn btn-outline-primary"><i class="fad fa-home-alt"></i> Tableau de bord</a>
             <a href="{{ path("clients") }}" class="btn btn-outline-dark"><i class="fad fa-id-card"></i> Listes des clients</a>
-            <a href="#" class="btn btn-outline-danger"><i class="fad fa-sign-out-alt"></i> Déconnexion</a>
+            <a href="{{ path('account-logout') }}" class="btn btn-outline-danger"><i class="fad fa-sign-out-alt"></i> Déconnexion</a>
         </div>
         <hr>
     </div>
