--- a/templates/Guichet/Clients.html.twig
+++ b/templates/Guichet/Clients.html.twig
@@ -11,7 +11,7 @@
             <a href="{{ path("guichet") }}" class="btn btn-outline-primary"><i class="fad fa-home-alt"></i> Tableau de bord</a>
             <a href="{{ path("buy") }}" class="btn btn-outline-dark"><i class="fad fa-money-check-alt"></i> Listes des achats</a>
             <a href="{{ path("sales") }}" class="btn btn-outline-dark"><i class="fad fa-money-bill-alt"></i> Listes des ventes</a>
-            <a href="#" class="btn btn-outline-danger"><i class="fad fa-sign-out-alt"></i> Déconnexion</a>
+            <a href="{{ path('account-logout') }}" class="btn btn-outline-danger"><i class="fad fa-sign-out-alt"></i> Déconnexion</a>
         </div>
         <hr>
     </div>
