--- a/templates/Administration/FormDevise.html.twig
+++ b/templates/Administration/FormDevise.html.twig
@@ -9,7 +9,7 @@
             <div class="container-fluid px-4">
                 <div class="d-flex justify-content-between">
                     <h3 class="text-black-50"><i class="fad fa-badge-dollar"></i> DEVISE</h3>
-                    <a href="{{ path("devise") }}" class="btn btn-dark">< Retour à la liste</a>
+                    <a href="{{ path("devise") }}" class="btn btn-dark"><i class="fad fa-arrow-alt-circle-left"></i> Retour à la liste</a>
                 </div>
                 <div class="col-md-6 mt-5">
                     {{ form_start(FormDevise) }}
