--- a/templates/Administration/FormExchange.html.twig
+++ b/templates/Administration/FormExchange.html.twig
@@ -9,7 +9,7 @@
             <div class="container-fluid px-4">
                 <div class="d-flex justify-content-between">
                     <h3 class="text-black-50"><i class="fad fa-wallet"></i> COURS DE CHANGE</h3>
-                    <a href="{{ path("exchange") }}" class="btn btn-dark">< Retour à la liste</a>
+                    <a href="{{ path("exchange") }}" class="btn btn-dark"><i class="fad fa-arrow-alt-circle-left"></i> Retour à la liste</a>
                 </div>
                 <div class="col-md-6 mt-5">
                     {{ form_start(FormExchange) }}
