--- a/templates/account/login.html.twig
+++ b/templates/account/login.html.twig
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6">
-                <div class="bg-light py-lg-5 px-lg-5">
+                <div class="card bg-light py-lg-5 px-lg-5">
                     <h2 class="text-center text-black-50 mb-3 titre-guichet"><i class="fad fa-user-circle"></i><br> Control d'accès</h2>
                     <form action="" method="post">
                         <div class="form-group">
