--- a/templates/Administration/Devise.html.twig
+++ b/templates/Administration/Devise.html.twig
@@ -29,7 +29,7 @@
                             <th scope="row">{{ listDevise.id }}</th>
                             <td>{{ listDevise.DeviseValue }}</td>
                             <td class="text-center col-2">
-                                <a href="{{ path("delete-devise", {'DeviseValue' : listDevise.DeviseValue}) }}" class="btn btn-danger"><i class="fad fa-trash-alt"></i></a>
+                                <a href="{{ path("delete-devise", {'DeviseValue' : listDevise.DeviseValue}) }}" class="btn btn-outline-danger"><i class="fad fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     {% endfor %}
