--- a/templates/Administration/Exchange.html.twig
+++ b/templates/Administration/Exchange.html.twig
@@ -29,7 +29,7 @@
                             <th scope="row">{{ ListExchange.id }}</th>
                             <th scope="row">{{ ListExchange.ExchangeValue }}</th>
                             <th scope="row" class="text-center col-1">
-                                <a href="{{ path('delete-exchange', {'ExchangeValue' : ListExchange.ExchangeValue}) }}" class="btn btn-danger"><i class="fad fa-trash-alt"></i></a>
+                                <a href="{{ path('delete-exchange', {'ExchangeValue' : ListExchange.ExchangeValue}) }}" class="btn btn-outline-danger"><i class="fad fa-trash-alt"></i></a>
                             </th>
                         </tr>
                     {% endfor %}
