--- a/templates/Administration/MotifVoyage.html.twig
+++ b/templates/Administration/MotifVoyage.html.twig
@@ -29,7 +29,7 @@
                             <th scope="row">{{ listMotifVoyage.id }}</th>
                             <td>{{ listMotifVoyage.MotifVoyageValue }}</td>
                             <td class="text-center col-2">
-                                <a href="{{ path("delete-motif-voyage", {'MotifVoyageValue' : listMotifVoyage.MotifVoyageValue}) }}" class="btn btn-danger"><i class="fad fa-trash-alt"></i></a>
+                                <a href="{{ path("delete-motif-voyage", {'MotifVoyageValue' : listMotifVoyage.MotifVoyageValue}) }}" class="btn btn-outline-danger"><i class="fad fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     {% endfor %}
