--- a/templates/Administration/Taxe.html.twig
+++ b/templates/Administration/Taxe.html.twig
@@ -29,7 +29,7 @@
                             <td scope="row">{{ listTva.id }}</td>
                             <td scope="row">{{ listTva.TauxValue }} <i class="fad fa-percentage"></i></td>
                             <td class="text-center col-2">
-                                <a href="{{ path("delete-taxe", {'TauxValue' : listTva.TauxValue}) }}" class="btn btn-danger"><i class="fad fa-trash-alt"></i></a>
+                                <a href="{{ path("delete-taxe", {'TauxValue' : listTva.TauxValue}) }}" class="btn btn-outline-danger"><i class="fad fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     {% endfor %}
