--- a/templates/Administration/TypeDocument.html.twig
+++ b/templates/Administration/TypeDocument.html.twig
@@ -29,7 +29,7 @@
                             <th scope="row">{{ listTypeDocument.id }}</th>
                             <td>{{ listTypeDocument.TypeDocumentValue }}</td>
                             <td class="text-center col-2">
-                                <a href="{{ path('delete-type-document', {'TypeDocumentValue' : listTypeDocument.TypeDocumentValue}) }}" class="btn btn-danger"><i class="fad fa-trash-alt"></i></a>
+                                <a href="{{ path('delete-type-document', {'TypeDocumentValue' : listTypeDocument.TypeDocumentValue}) }}" class="btn btn-outline-danger"><i class="fad fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     {% endfor %}
