--- a/templates/Administration/Exchange.html.twig
+++ b/templates/Administration/Exchange.html.twig
@@ -38,7 +38,7 @@
                 <div class="float-end">
                     <div class="btn-group">
                         <a href="{{ path("print-exchange") }}" target="_blank" class="btn btn-success"><i class="fad fa-print"></i> Imprimer la liste</a>
-                        <a href="#" class="btn btn-danger"><i class="fad fa-trash-alt"></i> Supprimer tout</a>
+                        <a href="" class="btn btn-danger"><i class="fad fa-trash-alt"></i> Supprimer tout</a>
                     </div>
                 </div>
             </div>
