--- a/templates/Guichet/Buy.html.twig
+++ b/templates/Guichet/Buy.html.twig
@@ -18,7 +18,7 @@
     <div class="container-fluid mt-lg-5">
         <div class="float-end mb-3">
             <div class="btn-group">
-                <a href="#" class="btn btn-primary"><i class="fad fa-plus"></i> Ajouter un achat</a>
+                <a href="{{ path('clients') }}" class="btn btn-primary"><i class="fad fa-plus"></i> Ajouter un achat</a>
                 <a href="#" class="btn btn-success"><i class="fad fa-list-alt"></i> Exporter la liste</a>
             </div>
         </div>
